# AI_Post_Manager

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  settings.py
